блок футер завершен

--- a/index.html
+++ b/index.html
@@ -218,7 +218,6 @@
         </div>
     </section>
     <!-- блок Продукты -->
-
     <!-- блок Опции -->
     <section class="options center">
         <div class="options__conteiner">
@@ -311,7 +310,7 @@
 
     </section>
     <!-- // блок Опции -->
-
+    <!-- блок Подписок -->
     <section class="subscrybe center">
         <div class="subscrybe-comment">
             <img src="./img/Intersect.png" alt="фото">
@@ -334,8 +333,14 @@
             </form>
         </div>
     </section>
+    <!-- // блок Подписок -->
+    <!-- блок О бренде -->
+    <section class="brand">
 
-    <footer class="footer center none">
+    </section>
+    <!--// блок О бренде -->
+    <!-- Блок Футер -->
+    <footer class="footer center">
         <div class="copy">
             <p class="footer-copy">
                 © 2022 Brand All Rights Reserved.
@@ -393,6 +398,6 @@
             </div>
         </div>
     </footer>
+    <!--// Блок Футер -->
 </body>
-
 </html>
