мелкие корректировки, проба установить полоску слева в тексте на блокке hero, думаем дальше

--- a/index.html
+++ b/index.html
@@ -63,10 +63,12 @@
     <!-- блок Банер -->
     <section class="hero center">
         <div class="hero-text">
-            <h1 class="hero-text__head"><span class="hero-text__span"></span>THE BRAND</h1>
+            <span class="hero-text__span"></span>
+            <h1 class="hero-text__head">THE BRAND</h1>
             <h2 class="hero-text__head hero-text_midle">OF LUXERIOUS
                 <span class="hero-text__head hero-text_midle hero-text_red">FASHION</span>
             </h2>
+
         </div>
     </section>
     <!-- // блок Банер -->
@@ -112,7 +114,7 @@
     <!-- // блок Предложения -->
 
     <!-- блок Продукты -->
-    <!--TO dO Расстояние между строк другое, эффект наведения, тени -->
+    <!--TO dO эффект наведения, тени -->
     <section class="products center">
         <!-- Заголовок блока продуктов с карточками -->
         <div class="products-title">
