разметка блока brand выполнена

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
         </div>
     </section>
-    <!-- блок Продукты -->
+    <!--// блок Продукты -->
 
     <!-- блок Опции -->
     <section class="options center">
@@ -328,8 +328,65 @@
     <!-- // блок Подписок -->
 
     <!-- блок О бренде -->
-    <section class="brand">
-
+    <section class="brand center">
+        <div class="brand-container">
+            <div class="brand-container__about">
+                <!-- logo -->
+                <div class="brand-container__logo">
+                    <a class="main-header__left main-header__link" href="#">
+                        <img src="./img/logo.png" width="44" height="38" alt="Логотип">
+                        <h1 class="main-header__brand">bran<span class="main-header__brand_red">d</span></h1>
+                    </a>
+                </div>
+                <div class="brand-container__texts">
+                    <p class="brand-container__text">Objectively transition extensive data rather than cross functional
+                        solutions. Monotonectally syndicate multidisciplinary materials before go forward benefits.
+                        Intrinsicly syndicate an expanded array of processes and cross-unit partnerships.</p>
+                    <p class="brand-container__text">Efficiently plagiarize 24/365 action items and focused
+                        infomediaries.
+                        Distinctively seize superior initiatives for wireless technologies. Dynamically optimize.</p>
+                </div>
+            </div>
+            <!-- baner1 -->
+            <div class="brand-container__info">
+                <div class="brand-continer__head">
+                    <h3 class="brand-container__title">COMPANY</h3>
+                </div>
+                <div class="brand-container__links">
+                    <a href="" class="brand-container__link">Home</a>
+                    <a href="" class="brand-container__link">Shop</a>
+                    <a href="" class="brand-container__link">About</a>
+                    <a href="" class="brand-container__link">How it works</a>
+                    <a href="" class="brand-container__link">Contacts</a>
+                </div>
+            </div>
+            <!-- baner2 -->
+            <div class="brand-container__info">
+                <div class="brand-continer__head">
+                    <h3 class="brand-container__title">INFORMATION</h3>
+                </div>
+                <div class="brand-container__links">
+                    <a href="" class="brand-container__link">Terms & Conditions</a>
+                    <a href="" class="brand-container__link">Privacy policy</a>
+                    <a href="" class="brand-container__link">How yo Buy</a>
+                    <a href="" class="brand-container__link">How to Sell</a>
+                    <a href="" class="brand-container__link">Promotion</a>
+                </div>
+            </div>
+            <!-- baner3 -->
+            <div class="brand-container__info">
+                <div class="brand-continer__head">
+                    <h3 class="brand-container__title">SHOP CATEGORY</h3>
+                </div>
+                <div class="brand-container__links">
+                    <a href="" class="brand-container__link">Men</a>
+                    <a href="" class="brand-container__link">Women</a>
+                    <a href="" class="brand-container__link">Child</a>
+                    <a href="" class="brand-container__link">Apparel</a>
+                    <a href="" class="brand-container__link">Brows All</a>
+                </div>
+            </div>
+        </div>
     </section>
     <!--// блок О бренде -->
 
