блок about готов

--- a/index.html
+++ b/index.html
@@ -338,10 +338,13 @@
                         <h1 class="main-header__brand">bran<span class="main-header__brand_red">d</span></h1>
                     </a>
                 </div>
+                <!-- logo content -->
                 <div class="brand-container__texts">
                     <p class="brand-container__text">Objectively transition extensive data rather than cross functional
                         solutions. Monotonectally syndicate multidisciplinary materials before go forward benefits.
                         Intrinsicly syndicate an expanded array of processes and cross-unit partnerships.</p>
+                </div>
+                <div class="brand-container__texts">
                     <p class="brand-container__text">Efficiently plagiarize 24/365 action items and focused
                         infomediaries.
                         Distinctively seize superior initiatives for wireless technologies. Dynamically optimize.</p>
