блок brand завершен

--- a/index.html
+++ b/index.html
@@ -357,10 +357,10 @@
                 </div>
                 <div class="brand-container__links">
                     <a href="" class="brand-container__link">Home</a>
-                    <a href="" class="brand-container__link">Shop</a>
-                    <a href="" class="brand-container__link">About</a>
-                    <a href="" class="brand-container__link">How it works</a>
-                    <a href="" class="brand-container__link">Contacts</a>
+                    <a href="" class="brand-container__link brand-container__link_lh">Shop</a>
+                    <a href="" class="brand-container__link brand-container__link_lh">About</a>
+                    <a href="" class="brand-container__link brand-container__link_lh">How it works</a>
+                    <a href="" class="brand-container__link brand-container__link_lh">Contacts</a>
                 </div>
             </div>
             <!-- baner2 -->
@@ -370,10 +370,10 @@
                 </div>
                 <div class="brand-container__links">
                     <a href="" class="brand-container__link">Terms & Conditions</a>
-                    <a href="" class="brand-container__link">Privacy policy</a>
-                    <a href="" class="brand-container__link">How yo Buy</a>
-                    <a href="" class="brand-container__link">How to Sell</a>
-                    <a href="" class="brand-container__link">Promotion</a>
+                    <a href="" class="brand-container__link brand-container__link_lh">Privacy policy</a>
+                    <a href="" class="brand-container__link brand-container__link_lh">How yo Buy</a>
+                    <a href="" class="brand-container__link brand-container__link_lh">How to Sell</a>
+                    <a href="" class="brand-container__link brand-container__link_lh">Promotion</a>
                 </div>
             </div>
             <!-- baner3 -->
@@ -383,10 +383,10 @@
                 </div>
                 <div class="brand-container__links">
                     <a href="" class="brand-container__link">Men</a>
-                    <a href="" class="brand-container__link">Women</a>
-                    <a href="" class="brand-container__link">Child</a>
-                    <a href="" class="brand-container__link">Apparel</a>
-                    <a href="" class="brand-container__link">Brows All</a>
+                    <a href="" class="brand-container__link brand-container__link_lh">Women</a>
+                    <a href="" class="brand-container__link brand-container__link_lh">Child</a>
+                    <a href="" class="brand-container__link brand-container__link_lh">Apparel</a>
+                    <a href="" class="brand-container__link brand-container__link_lh">Brows All</a>
                 </div>
             </div>
         </div>
