работа над блоком подписка, написание автора статьи

--- a/index.html
+++ b/index.html
@@ -309,7 +309,12 @@
             <p class="subscrybe-comment__paragraf">
                 “Vestibulum quis porttitor dui! Quisque viverra nunc mi,
                 a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium”
+            <p class="subscrybe-comment__sign">
+                Bin Burhan
+                Dhaka, Bd
             </p>
+        </p>
+            
         </div>
 
         <div class="subscrybe-form">
