блок подписки готов.

--- a/index.html
+++ b/index.html
@@ -305,16 +305,22 @@
     <!-- TO dO доделать пагинацию в блоке комментарии -->
     <section class="subscrybe center">
         <div class="subscrybe-comment">
+
             <img src="./img/Intersect.png" alt="фото">
-            <p class="subscrybe-comment__paragraf">
-                “Vestibulum quis porttitor dui! Quisque viverra nunc mi,
-                a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium”
-            <p class="subscrybe-comment__sign">
-                Bin Burhan
-                Dhaka, Bd
-            </p>
-        </p>
-            
+            <div class="subscrybe-comment__text">
+                <p class="subscrybe-comment__paragraf">
+                    “Vestibulum quis porttitor dui! Quisque viverra nunc mi,
+                    a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium”
+                </p>
+                <p class="subscrybe-comment__sign">
+                    <span class="subscrybe-comment__sign_font">Bin Burhan</span> <br>
+                    Dhaka, Bd
+                </p>
+                <div class="subscrybe-comment__pag">
+                    <span class="subscrybe-comment__span"></span><span class="subscrybe-comment__span subscrybe-comment__span_pink"></span><span class="subscrybe-comment__span"></span>
+                </div>
+            </div>
+
         </div>
 
         <div class="subscrybe-form">
