процесс создания выпадающего меню

--- a/index.html
+++ b/index.html
@@ -50,7 +50,42 @@
     <section class="navigation center">
         <ul class="menu">
             <li class="menu__list"><a href="#" class="menu__link">home</a></li>
-            <li class="menu__list"><a href="#" class="menu__link">man</a></li>
+            <li class="menu__list"><a href="#" class="menu__link">man</a>
+                <div class="dropdown">
+                    <div class="menu__item">
+                        <h3 class="menu__title">Women</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                        <a href="#" class="menu__link menu__link_drop">Blazers</a>
+                        <a href="#" class="menu__link menu__link_drop">Denim</a>
+                        <a href="#" class="menu__link menu__link_drop">Leggings/Pants</a>
+                        <a href="#" class="menu__link menu__link_drop">Skirts/Shorts</a>
+                        <a href="#" class="menu__link menu__link_drop">Accessories</a>
+                    </div>
+                    <div class="menu__item">
+                        <h3 class="menu__title">Women</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                    </div>
+                    <div class="menu__item">
+                        <h3 class="menu__title">Women</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                    </div>
+                    <div class="menu__item">
+                        <h3 class="menu__title">Women</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                    </div>
+                </div>
+            </li>
             <li class="menu__list"><a href="#" class="menu__link">women</a></li>
             <li class="menu__list"><a href="#" class="menu__link">kids</a></li>
             <li class="menu__list"><a href="#" class="menu__link">accesories</a></li>
@@ -317,7 +352,9 @@
                     Dhaka, Bd
                 </p>
                 <div class="subscrybe-comment__pag">
-                    <span class="subscrybe-comment__span"></span><span class="subscrybe-comment__span subscrybe-comment__span_pink"></span><span class="subscrybe-comment__span"></span>
+                    <span class="subscrybe-comment__span"></span><span
+                        class="subscrybe-comment__span subscrybe-comment__span_pink"></span><span
+                        class="subscrybe-comment__span"></span>
                 </div>
             </div>
 
