попытка установить фото в конце выпадающего меню

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                         <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
                         <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                     </div>
+                    <div class="menu__item menu__item_bg">
+                        <img class="menu__item_img" src="./img/sale_baner.png" alt="">
+                    </div>
                 </div>
             </li>
             <li class="menu__list"><a href="#" class="menu__link">women</a></li>
