корректировка положения выпадающего блока по меню

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <ul class="menu">
             <li class="menu__list"><a href="#" class="menu__link">home</a></li>
             <li class="menu__list"><a href="#" class="menu__link">man</a>
-                <div class="dropdown">
+                <div class="dropdown dropdown_mv">
                     <div class="menu__item">
-                        <h3 class="menu__title">Women</h3>
+                        <h3 class="menu__title">man</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
                         <a href="#" class="menu__link menu__link_drop">Tops</a>
                         <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
@@ -65,20 +65,20 @@
                         <a href="#" class="menu__link menu__link_drop">Accessories</a>
                     </div>
                     <div class="menu__item">
-                        <h3 class="menu__title">Women</h3>
+                        <h3 class="menu__title">man</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
                         <a href="#" class="menu__link menu__link_drop">Tops</a>
                         <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
                         <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
                     </div>
                     <div class="menu__item menu__item_mv-dwn">
-                        <h3 class="menu__title">Women</h3>
+                        <h3 class="menu__title">man</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
                         <a href="#" class="menu__link menu__link_drop">Tops</a>
                         <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
                     </div>
                     <div class="menu__item menu__item_mv-up">
-                        <h3 class="menu__title">Women</h3>
+                        <h3 class="menu__title">man</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
                         <a href="#" class="menu__link menu__link_drop">Tops</a>
                         <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
@@ -89,7 +89,45 @@
                     </div>
                 </div>
             </li>
-            <li class="menu__list"><a href="#" class="menu__link">women</a></li>
+            <li class="menu__list"><a href="#" class="menu__link">women</a>
+                <div class="dropdown dropdown_mv">
+                    <div class="menu__item">
+                        <h3 class="menu__title">women</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                        <a href="#" class="menu__link menu__link_drop">Blazers</a>
+                        <a href="#" class="menu__link menu__link_drop">Denim</a>
+                        <a href="#" class="menu__link menu__link_drop">Leggings/Pants</a>
+                        <a href="#" class="menu__link menu__link_drop">Skirts/Shorts</a>
+                        <a href="#" class="menu__link menu__link_drop">Accessories</a>
+                    </div>
+                    <div class="menu__item">
+                        <h3 class="menu__title">women</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                    </div>
+                    <div class="menu__item menu__item_mv-dwn">
+                        <h3 class="menu__title">women</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                    </div>
+                    <div class="menu__item menu__item_mv-up">
+                        <h3 class="menu__title">women</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                    </div>
+                    <div class="menu__item menu__item_bg">
+                        <img class="menu__item_img" src="./img/sale_baner.png" alt="">
+                    </div>
+                </div>
+            </li>
             <li class="menu__list"><a href="#" class="menu__link">kids</a></li>
             <li class="menu__list"><a href="#" class="menu__link">accesories</a></li>
             <li class="menu__list"><a href="#" class="menu__link">featured</a></li>
