--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
             </li>
             <li class="menu__list"><a href="#" class="menu__link">women</a>
-                <div class="dropdown dropdown_mv">
+                <div class="dropdown dropdown_mv dropdown_women">
                     <div class="menu__item">
                         <h3 class="menu__title">women</h3>
                         <a href="#" class="menu__link menu__link_drop">Dresses</a>
