настройка выпадающего меню последних элементов

--- a/index.html
+++ b/index.html
@@ -49,7 +49,22 @@
     <!-- Главное Меню -->
     <section class="navigation center">
         <ul class="menu">
-            <li class="menu__list"><a href="#" class="menu__link">home</a></li>
+            <li class="menu__list"><a href="#" class="menu__link">home</a>
+                <div class="dropdown dropdown_mv dropdown_home">
+                    <div class="menu__item">
+                        <h3 class="menu__title">Home</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                        <a href="#" class="menu__link menu__link_drop">Blazers</a>
+                        <a href="#" class="menu__link menu__link_drop">Denim</a>
+                        <a href="#" class="menu__link menu__link_drop">Leggings/Pants</a>
+                        <a href="#" class="menu__link menu__link_drop">Skirts/Shorts</a>
+                        <a href="#" class="menu__link menu__link_drop">Accessories</a>
+                    </div>
+                </div>
+            </li>
             <li class="menu__list"><a href="#" class="menu__link">man</a>
                 <div class="dropdown dropdown_mv">
                     <div class="menu__item">
@@ -130,8 +145,84 @@
             </li>
             <li class="menu__list"><a href="#" class="menu__link">kids</a></li>
             <li class="menu__list"><a href="#" class="menu__link">accesories</a></li>
-            <li class="menu__list"><a href="#" class="menu__link">featured</a></li>
-            <li class="menu__list"><a href="#" class="menu__link">hot deals</a></li>
+            <li class="menu__list"><a href="#" class="menu__link">featured</a>
+                <div class="dropdown dropdown_mv">
+                    <div class="menu__item">
+                        <h3 class="menu__title">man</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                        <a href="#" class="menu__link menu__link_drop">Blazers</a>
+                        <a href="#" class="menu__link menu__link_drop">Denim</a>
+                        <a href="#" class="menu__link menu__link_drop">Leggings/Pants</a>
+                        <a href="#" class="menu__link menu__link_drop">Skirts/Shorts</a>
+                        <a href="#" class="menu__link menu__link_drop">Accessories</a>
+                    </div>
+                    <div class="menu__item">
+                        <h3 class="menu__title">man</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                    </div>
+                    <div class="menu__item menu__item_mv-dwn">
+                        <h3 class="menu__title">man</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                    </div>
+                    <div class="menu__item menu__item_mv-up">
+                        <h3 class="menu__title">man</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                    </div>
+                    <div class="menu__item menu__item_bg">
+                        <img class="menu__item_img" src="./img/sale_baner.png" alt="">
+                    </div>
+                </div>
+            </li>
+            <li class="menu__list "><a href="#" class="menu__link">hot deals</a>
+                <div class="dropdown dropdown_last">
+                    <div class="menu__item">
+                        <h3 class="menu__title">man</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                        <a href="#" class="menu__link menu__link_drop">Blazers</a>
+                        <a href="#" class="menu__link menu__link_drop">Denim</a>
+                        <a href="#" class="menu__link menu__link_drop">Leggings/Pants</a>
+                        <a href="#" class="menu__link menu__link_drop">Skirts/Shorts</a>
+                        <a href="#" class="menu__link menu__link_drop">Accessories</a>
+                    </div>
+                    <div class="menu__item">
+                        <h3 class="menu__title">man</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                    </div>
+                    <div class="menu__item menu__item_mv-dwn">
+                        <h3 class="menu__title">man</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                    </div>
+                    <div class="menu__item menu__item_mv-up">
+                        <h3 class="menu__title">man</h3>
+                        <a href="#" class="menu__link menu__link_drop">Dresses</a>
+                        <a href="#" class="menu__link menu__link_drop">Tops</a>
+                        <a href="#" class="menu__link menu__link_drop">Sweaters/Knits</a>
+                        <a href="#" class="menu__link menu__link_drop">Jackets/Coats</a>
+                    </div>
+                    <div class="menu__item menu__item_bg">
+                        <img class="menu__item_img" src="./img/sale_baner.png" alt="">
+                    </div>
+                </div>
+            </li>
         </ul>
     </section>
     <!-- // Главное Меню -->
